@@ -20,6 +20,7 @@
 #include "cinema_dialog.h"
 #include "wx_util.h"
 #include "lib/dcpomatic_assert.h"
+#include "lib/util.h"
 #include <boost/foreach.hpp>
 
 using std::string;
@@ -63,7 +64,7 @@ CinemaDialog::CinemaDialog (wxWindow* parent, string title, string name, list<st
 	vector<string> columns;
 	columns.push_back (wx_to_std (_("Address")));
 	_email_list = new EditableList<string, EmailDialog> (
-		this, columns, bind (&CinemaDialog::get_emails, this), bind (&CinemaDialog::set_emails, this, _1), bind (&column, _1)
+		this, columns, bind (&CinemaDialog::get_emails, this), bind (&CinemaDialog::set_emails, this, _1), bind (&string_not_empty, _1), bind (&column, _1)
 		);
 
 	sizer->Add (_email_list, wxGBPosition (r, 0), wxGBSpan (1, 2), wxEXPAND);
